# rust_study

./: .gitignore  Cargo.toml
src/: coord.rs  game.rs  lib.rs  main.rs  map.rs  player.rs  world.rs
src/player/: camera.rs  mod.rs
src/tag/: mod.rs  owner.rs  tile.rs  walkable.rs
src/world/: coord.rs  line.rs  mod.rs  tile.rs
src/world/tile/: default.rs  mod.rs
src/world/tile/bomb/: mod.rs  tiles.rs
struct_name/: Cargo.toml
struct_name/src/: lib.rs
struct_name/struct_name_derive/: Cargo.toml
struct_name/struct_name_derive/src/: lib.rs
