[package]
name = "my_game"
version = "0.3.8"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
bevy = { version = "0.11", features = ["dynamic_linking"] }
serde = "1.0"
colored = { version = "2.0" }
bevy-inspector-egui = { version = "0.19" }
struct_name = { path = "./struct_name" }

[workspace]
members = ["struct_name", "struct_name/struct_name_derive"]
